// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useCalendar hook tests gives correct days & month 1`] = `
|                Jan 2021                 |
|-----------------------------------------|
| SUN | MON | TUE | WED | THU | FRI | SAT |
|     |     |     |     |     |  01 |  02 |
|  03 |  04 |  05 |  06 |  07 |  08 |  09 |
|  10 |  11 |  12 |  13 |  14 |  15 |  16 |
|  17 |  18 |  19 |  20 |  21 |  22 |  23 |
|  24 |  25 |  26 |  27 |  28 |  29 |  30 |
|  31 |     |     |     |     |     |     |
`;

exports[`useCalendar hook tests setMonth works 1`] = `
|                Jan 2021                 |
|-----------------------------------------|
| SUN | MON | TUE | WED | THU | FRI | SAT |
|     |     |     |     |     |  01 |  02 |
|  03 |  04 |  05 |  06 |  07 |  08 |  09 |
|  10 |  11 |  12 |  13 |  14 |  15 |  16 |
|  17 |  18 |  19 |  20 |  21 |  22 |  23 |
|  24 |  25 |  26 |  27 |  28 |  29 |  30 |
|  31 |     |     |     |     |     |     |
`;

exports[`useCalendar hook tests setMonth works 2`] = `
|                Apr 2021                 |
|-----------------------------------------|
| SUN | MON | TUE | WED | THU | FRI | SAT |
|     |     |     |     |  01 |  02 |  03 |
|  04 |  05 |  06 |  07 |  08 |  09 |  10 |
|  11 |  12 |  13 |  14 |  15 |  16 |  17 |
|  18 |  19 |  20 |  21 |  22 |  23 |  24 |
|  25 |  26 |  27 |  28 |  29 |  30 |     |
|     |     |     |     |     |     |     |
`;

exports[`useCalendar hook tests setStartOfWeek 1`] = `
|                Jan 2021                 |
|-----------------------------------------|
| SUN | MON | TUE | WED | THU | FRI | SAT |
|     |     |     |     |     |  01 |  02 |
|  03 |  04 |  05 |  06 |  07 |  08 |  09 |
|  10 |  11 |  12 |  13 |  14 |  15 |  16 |
|  17 |  18 |  19 |  20 |  21 |  22 |  23 |
|  24 |  25 |  26 |  27 |  28 |  29 |  30 |
|  31 |     |     |     |     |     |     |
`;

exports[`useCalendar hook tests setStartOfWeek 2`] = `
|                Jan 2021                 |
|-----------------------------------------|
| MON | TUE | WED | THU | FRI | SAT | SUN |
|     |     |     |     |  01 |  02 |  03 |
|  04 |  05 |  06 |  07 |  08 |  09 |  10 |
|  11 |  12 |  13 |  14 |  15 |  16 |  17 |
|  18 |  19 |  20 |  21 |  22 |  23 |  24 |
|  25 |  26 |  27 |  28 |  29 |  30 |  31 |
|     |     |     |     |     |     |     |
`;
